[package]
name = "markdownviewer"
version = "0.1.0"
description = "Markdown Viewer"
authors = ["Alec"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-hide", "window-set-decorations", "window-set-resizable", "window-set-title", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
comrak = "0.12"
regex = "1.5"
serde_json = "1.0"
window-vibrancy = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
